# riptv

./: Cargo.toml
src/: args.rs  consts.rs  file_io.rs  install.rs  main.rs  notif.rs  player.rs  playlist_parser.rs  update.rs
src/file_io/: extract_channels.rs  install.rs  install_playlist.rs  playlist_parser.rs  restore.rs
src/player/: connect_vpn.rs  get_channel.rs  get_url.rs  mpv.rs
src/update/: log.rs
src/update/log/: read.rs  write.rs
