[package]
name = "riptv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive"] }
directories = "5.0.0"
futures-util = "0.3.28"
indicatif = "0.17.3"
is-terminal = "0.4.6"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
strip-ansi-escapes = "0.1.1"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
